--- a/stage.html
+++ b/stage.html
@@ -1,101 +1,52 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stage - Portfolio de Caron Adam</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="header"></div>
-    <main class="container">
-        <h1 class="page-title">Stage en Entreprise</h1>
-        
-        <section>
-            <h2>Présentation du Stage</h2>
-            <p>J'ai effectué un stage de 6 semaines au sein de l'entreprise <strong>Amsom-Habitat</strong> où j'ai pu travailler sur divers aspects de l'administration système et réseau.</p>
-        </section>
+<main class="container">
+    <h1 class="page-title">Stages en Entreprise</h1>
 
-        <section>
-            <h2>Missions Réalisées</h2>
-            <ul>
-                <li>Déploiement de postes de travail avec <strong>ManageEngine Desktop Central</strong></li>
-                <li>Gestion des stratégies de chiffrement BitLocker</li>
-                <li>Configuration et administration Active Directory</li>
-                <li>Gestion et sécurisation des accès via FortiGate</li>
-                <li>Suivi des incidents et interventions sur le SI</li>
-                <li>Administration des imprimantes sur Windows Server</li>
-                <li>Mise en place de règles de pare-feu et suivi des logs</li>
-            </ul>
-        </section>
+    <!-- STAGE 2e ANNÉE -->
+    <section class="projet-box">
+        <h2>Stage 2<sup>e</sup> année - Amsom-Habitat</h2>
+        <h3>Présentation</h3>
+        <p>Stage de 6 semaines au sein d'<strong>Amsom-Habitat</strong>, axé sur l'administration système et réseau.</p>
 
-        <section>
-            <h2>Outils Utilisés</h2>
-            <ul>
-                <li><strong>ManageEngine Desktop Central</strong> - Déploiement et gestion des machines</li>
-                <li><strong>Active Directory</strong> - Gestion des utilisateurs et groupes</li>
-                <li><strong>FortiGate</strong> - Administration du pare-feu</li>
-                <li><strong>GLPI</strong> - Suivi des tickets et gestion du support</li>
-                <li><strong>BitLocker</strong> - Chiffrement des postes</li>
-                <li><strong>Zabbix</strong> - Monitoring des infrastructures</li>
-            </ul>
-        </section>
+        <h3>Missions Réalisées</h3>
+        <ul>
+            <li>Déploiement de postes via <strong>Desktop Central</strong></li>
+            <li>Gestion de <strong>BitLocker</strong></li>
+            <li>Configuration de <strong>Active Directory</strong></li>
+            <li>Paramétrage du <strong>pare-feu FortiGate</strong></li>
+            <li>Suivi des tickets avec <strong>GLPI</strong></li>
+            <li>Gestion des imprimantes Windows Server</li>
+            <li>Création de règles de pare-feu et supervision</li>
+        </ul>
 
-        <section>
-            <h2>Compétences Acquises</h2>
-            <p>Grâce à ce stage, j'ai pu renforcer mes compétences en :</p>
-            <ul>
-                <li>Déploiement et gestion des systèmes Windows</li>
-                <li>Sécurisation des infrastructures réseau</li>
-                <li>Configuration et administration de pare-feu</li>
-                <li>Support et dépannage informatique</li>
-                <li>Gestion des droits et permissions sur Active Directory</li>
-            </ul>
-        </section>
+        <h3>Outils Utilisés</h3>
+        <ul>
+            <li><strong>Desktop Central</strong>, <strong>BitLocker</strong>, <strong>GLPI</strong>, <strong>FortiGate</strong>, <strong>Active Directory</strong>, <strong>Zabbix</strong></li>
+        </ul>
 
-<section>
-    <h2>Documents</h2>
-    <p>
-        <a href="Document/Epreuve_E5_caron_adam.pdf" target="_blank">
-            📄 Fiche <strong>E5</strong> (PDF)
-        </a>
-    </p>
-    <p>
-        <a href="Document/E6_Projet1_Caron_Adam.docx" target="_blank">
-            📄 Télécharger le <strong>Projet1 E6</strong>
-        </a>
-    </p>
-    <p>
-        <a href="Document/E6_Projet2_Caron_Adam.docx" target="_blank">
-            📄 Télécharger le <strong>Projet2 E6</strong>
-        </a>
-    </p>
-    <p>
-        <a href="Document/E6_Projet3_Caron_Adam.docx" target="_blank">
-            📄 Télécharger le <strong>Projet3 E6</strong>
-        </a>
-    </p>
-    <p>
-        <a href="Document/Amsom.pdf" target="_blank">
-            📄 Stage AMSOM HABITAT <strong>2ème année</strong> (PDF)
-        </a>
-    </p>
-    <p>
-        <a href="Document/Uniris.pdf" target="_blank">
-            📄 Stage UNIRIS <strong>1ère année</strong> (PDF)
-        </a>
-    </p>
-</section>
+        <h3>Document</h3>
+        <p><a href="Document/Amsom.pdf" target="_blank">📄 Voir le rapport (PDF)</a></p>
+    </section>
 
-        <a href="index.html" class="back-link">Retour au portfolio</a>
-    </main>
-    
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Caron Adam - Tous droits réservés</p>
-        </div>
-    </footer>
+    <!-- STAGE 1re ANNÉE -->
+    <section class="projet-box">
+        <h2>Stage 1<sup>re</sup> année - Uniris</h2>
+        <h3>Présentation</h3>
+        <p>Stage de 4 semaines au sein d'<strong>Uniris</strong>. Stage d'observation et de formation orienté Linux.</p>
 
-    <script src="loadHeader.js"></script>
-</body>
-</html>
+        <h3>Missions Réalisées</h3>
+        <ul>
+            <li>Formation aux commandes de base <strong>Linux</strong></li>
+            <li>Mise en place d’un <strong>serveur d’installation automatisée d’Ubuntu</strong></li>
+        </ul>
+
+        <h3>Outils Utilisés</h3>
+        <ul>
+            <li><strong>Ubuntu Server</strong>, terminal Bash</li>
+        </ul>
+
+        <h3>Document</h3>
+        <p><a href="Document/Uniris.pdf" target="_blank">📄 Voir le rapport (PDF)</a></p>
+    </section>
+
+    <a href="index.html" class="back-link">Retour au portfolio</a>
+</main>
