--- a/stage.html
+++ b/stage.html
@@ -1,52 +1,45 @@
 <main class="container">
     <h1 class="page-title">Stages en Entreprise</h1>
 
-    <!-- STAGE 2e ANNÉE -->
-    <section class="projet-box">
-        <h2>Stage 2<sup>e</sup> année - Amsom-Habitat</h2>
-        <h3>Présentation</h3>
-        <p>Stage de 6 semaines au sein d'<strong>Amsom-Habitat</strong>, axé sur l'administration système et réseau.</p>
+    <div class="projet-container">
+        <!-- Stage 2e année -->
+        <div class="projet-box">
+            <h2>Stage 2<sup>e</sup> année - Amsom-Habitat</h2>
+            <h3>Missions Réalisées</h3>
+            <ul>
+                <li>Déploiement de postes via <strong>ManageEngine Desktop Central</strong></li>
+                <li>Gestion du chiffrement <strong>BitLocker</strong></li>
+                <li>Configuration de <strong>Active Directory</strong></li>
+                <li>Administration du pare-feu <strong>FortiGate</strong></li>
+                <li>Suivi des incidents via <strong>GLPI</strong></li>
+                <li>Gestion des imprimantes sur Windows Server</li>
+                <li>Règles pare-feu + suivi des logs</li>
+            </ul>
+            <h3>Outils Utilisés</h3>
+            <ul>
+                <li><strong>Desktop Central</strong>, <strong>GLPI</strong>, <strong>FortiGate</strong>, <strong>BitLocker</strong>, <strong>Active Directory</strong>, <strong>Zabbix</strong></li>
+            </ul>
+            <h3>Document</h3>
+            <p><a href="Document/Amsom.pdf" target="_blank">📄 Fiche PDF</a></p>
+        </div>
 
-        <h3>Missions Réalisées</h3>
-        <ul>
-            <li>Déploiement de postes via <strong>Desktop Central</strong></li>
-            <li>Gestion de <strong>BitLocker</strong></li>
-            <li>Configuration de <strong>Active Directory</strong></li>
-            <li>Paramétrage du <strong>pare-feu FortiGate</strong></li>
-            <li>Suivi des tickets avec <strong>GLPI</strong></li>
-            <li>Gestion des imprimantes Windows Server</li>
-            <li>Création de règles de pare-feu et supervision</li>
-        </ul>
-
-        <h3>Outils Utilisés</h3>
-        <ul>
-            <li><strong>Desktop Central</strong>, <strong>BitLocker</strong>, <strong>GLPI</strong>, <strong>FortiGate</strong>, <strong>Active Directory</strong>, <strong>Zabbix</strong></li>
-        </ul>
-
-        <h3>Document</h3>
-        <p><a href="Document/Amsom.pdf" target="_blank">📄 Voir le rapport (PDF)</a></p>
-    </section>
-
-    <!-- STAGE 1re ANNÉE -->
-    <section class="projet-box">
-        <h2>Stage 1<sup>re</sup> année - Uniris</h2>
-        <h3>Présentation</h3>
-        <p>Stage de 4 semaines au sein d'<strong>Uniris</strong>. Stage d'observation et de formation orienté Linux.</p>
-
-        <h3>Missions Réalisées</h3>
-        <ul>
-            <li>Formation aux commandes de base <strong>Linux</strong></li>
-            <li>Mise en place d’un <strong>serveur d’installation automatisée d’Ubuntu</strong></li>
-        </ul>
-
-        <h3>Outils Utilisés</h3>
-        <ul>
-            <li><strong>Ubuntu Server</strong>, terminal Bash</li>
-        </ul>
-
-        <h3>Document</h3>
-        <p><a href="Document/Uniris.pdf" target="_blank">📄 Voir le rapport (PDF)</a></p>
-    </section>
+        <!-- Stage 1re année -->
+        <div class="projet-box">
+            <h2>Stage 1<sup>re</sup> année - Uniris</h2>
+            <h3>Missions Réalisées</h3>
+            <ul>
+                <li>Formation aux commandes <strong>Linux</strong></li>
+                <li>Mise en place d’un serveur d’installation automatisée d’Ubuntu</li>
+            </ul>
+            <h3>Outils Utilisés</h3>
+            <ul>
+                <li><strong>Ubuntu Server</strong></li>
+                <li>Commandes Bash (terminal)</li>
+            </ul>
+            <h3>Document</h3>
+            <p><a href="Document/Uniris.pdf" target="_blank">📄 Fiche PDF</a></p>
+        </div>
+    </div>
 
     <a href="index.html" class="back-link">Retour au portfolio</a>
 </main>
