--- a/stage.html
+++ b/stage.html
@@ -12,7 +12,7 @@
         <h1 class="page-title">Stage en Entreprise</h1>
         
         <section>
-            <h2>Présentation du Stage</h2>
+            <h2>Présentation du Stage de 2ème année</h2>
             <p>J'ai effectué un stage de 6 semaines au sein de l'entreprise <strong>Amsom-Habitat</strong> où j'ai pu travailler sur divers aspects de l'administration système et réseau.</p>
         </section>
 
