--- a/stage.html
+++ b/stage.html
@@ -8,88 +8,78 @@
 </head>
 <body>
     <div id="header"></div>
+
     <main class="container">
         <h1 class="page-title">Stage en Entreprise</h1>
-        
-        <section>
-            <h2>Présentation du Stage de 2ème année</h2>
-            <p>J'ai effectué un stage de 6 semaines au sein de l'entreprise <strong>Amsom-Habitat</strong> où j'ai pu travailler sur divers aspects de l'administration système et réseau.</p>
-        </section>
+
+        <!-- Nouveau bloc flexbox contenant les deux stages -->
+        <div class="stage-container">
+            <!-- Stage 1ère année -->
+            <div class="stage-box stage-left">
+                <h2>Stage de 1ère année</h2>
+                <p>J'ai effectué un stage de 4 semaines chez <strong>Uniris</strong> où j'ai travaillé sur des serveurs Linux et la mise en place d’un serveur PXE.</p>
+
+                <h3>Missions Réalisées</h3>
+                <ul>
+                    <li>Apprentissage et utilisation de Linux (Ubuntu Server)</li>
+                    <li>Mise en place d’un serveur d’installation automatisée (PXE)</li>
+                    <li>Création de scripts pour automatiser le déploiement</li>
+                    <li>Configuration réseau et tests</li>
+                </ul>
+
+                <h3>Outils Utilisés</h3>
+                <ul>
+                    <li><strong>Ubuntu Server</strong></li>
+                    <li><strong>PXE</strong></li>
+                    <li><strong>Bash</strong> (scripts)</li>
+                </ul>
+
+                <h3>Document</h3>
+                <p><a href="Document/Uniris.pdf" target="_blank">📄 Stage UNIRIS <strong>1ère année</strong> (PDF)</a></p>
+            </div>
+
+            <!-- Stage 2ème année -->
+            <div class="stage-box stage-right">
+                <h2>Stage de 2ème année</h2>
+                <p>J'ai effectué un stage de 6 semaines au sein de l'entreprise <strong>Amsom-Habitat</strong> où j'ai pu travailler sur divers aspects de l'administration système et réseau.</p>
+
+                <h3>Missions Réalisées</h3>
+                <ul>
+                    <li>Déploiement de postes de travail avec <strong>ManageEngine Desktop Central</strong></li>
+                    <li>Gestion des stratégies de chiffrement BitLocker</li>
+                    <li>Configuration et administration Active Directory</li>
+                    <li>Gestion et sécurisation des accès via FortiGate</li>
+                    <li>Suivi des incidents et interventions sur le SI</li>
+                    <li>Administration des imprimantes sur Windows Server</li>
+                    <li>Mise en place de règles de pare-feu et suivi des logs</li>
+                </ul>
+
+                <h3>Outils Utilisés</h3>
+                <ul>
+                    <li><strong>ManageEngine Desktop Central</strong></li>
+                    <li><strong>Active Directory</strong></li>
+                    <li><strong>FortiGate</strong></li>
+                    <li><strong>GLPI</strong></li>
+                    <li><strong>BitLocker</strong></li>
+                    <li><strong>Zabbix</strong></li>
+                </ul>
+
+                <h3>Documents</h3>
+                <p><a href="Document/Amsom.pdf" target="_blank">📄 Stage AMSOM HABITAT <strong>2ème année</strong> (PDF)</a></p>
+            </div>
+        </div>
 
         <section>
-            <h2>Missions Réalisées</h2>
-            <ul>
-                <li>Déploiement de postes de travail avec <strong>ManageEngine Desktop Central</strong></li>
-                <li>Gestion des stratégies de chiffrement BitLocker</li>
-                <li>Configuration et administration Active Directory</li>
-                <li>Gestion et sécurisation des accès via FortiGate</li>
-                <li>Suivi des incidents et interventions sur le SI</li>
-                <li>Administration des imprimantes sur Windows Server</li>
-                <li>Mise en place de règles de pare-feu et suivi des logs</li>
-            </ul>
+            <h2>Documents supplémentaires</h2>
+            <p><a href="Document/Epreuve_E5_caron_adam.pdf" target="_blank">📄 Fiche <strong>E5</strong> (PDF)</a></p>
+            <p><a href="Document/E6_Projet1_Caron_Adam.docx" target="_blank">📄 Télécharger le <strong>Projet1 E6</strong></a></p>
+            <p><a href="Document/E6_Projet2_Caron_Adam.docx" target="_blank">📄 Télécharger le <strong>Projet2 E6</strong></a></p>
+            <p><a href="Document/E6_Projet3_Caron_Adam.docx" target="_blank">📄 Télécharger le <strong>Projet3 E6</strong></a></p>
         </section>
-
-        <section>
-            <h2>Outils Utilisés</h2>
-            <ul>
-                <li><strong>ManageEngine Desktop Central</strong> - Déploiement et gestion des machines</li>
-                <li><strong>Active Directory</strong> - Gestion des utilisateurs et groupes</li>
-                <li><strong>FortiGate</strong> - Administration du pare-feu</li>
-                <li><strong>GLPI</strong> - Suivi des tickets et gestion du support</li>
-                <li><strong>BitLocker</strong> - Chiffrement des postes</li>
-                <li><strong>Zabbix</strong> - Monitoring des infrastructures</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Compétences Acquises</h2>
-            <p>Grâce à ce stage, j'ai pu renforcer mes compétences en :</p>
-            <ul>
-                <li>Déploiement et gestion des systèmes Windows</li>
-                <li>Sécurisation des infrastructures réseau</li>
-                <li>Configuration et administration de pare-feu</li>
-                <li>Support et dépannage informatique</li>
-                <li>Gestion des droits et permissions sur Active Directory</li>
-            </ul>
-        </section>
-
-<section>
-    <h2>Documents</h2>
-    <p>
-        <a href="Document/Epreuve_E5_caron_adam.pdf" target="_blank">
-            📄 Fiche <strong>E5</strong> (PDF)
-        </a>
-    </p>
-    <p>
-        <a href="Document/E6_Projet1_Caron_Adam.docx" target="_blank">
-            📄 Télécharger le <strong>Projet1 E6</strong>
-        </a>
-    </p>
-    <p>
-        <a href="Document/E6_Projet2_Caron_Adam.docx" target="_blank">
-            📄 Télécharger le <strong>Projet2 E6</strong>
-        </a>
-    </p>
-    <p>
-        <a href="Document/E6_Projet3_Caron_Adam.docx" target="_blank">
-            📄 Télécharger le <strong>Projet3 E6</strong>
-        </a>
-    </p>
-    <p>
-        <a href="Document/Amsom.pdf" target="_blank">
-            📄 Stage AMSOM HABITAT <strong>2ème année</strong> (PDF)
-        </a>
-    </p>
-    <p>
-        <a href="Document/Uniris.pdf" target="_blank">
-            📄 Stage UNIRIS <strong>1ère année</strong> (PDF)
-        </a>
-    </p>
-</section>
 
         <a href="index.html" class="back-link">Retour au portfolio</a>
     </main>
-    
+
     <footer>
         <div class="container">
             <p>&copy; 2024 Caron Adam - Tous droits réservés</p>
