--- a/stage.html
+++ b/stage.html
@@ -13,9 +13,9 @@
         <h1 class="page-title">Stage en Entreprise</h1>
 
         <!-- Nouveau bloc flexbox contenant les deux stages -->
-        <div class="stage-container">
+        <div class="projet-container">
             <!-- Stage 1ère année -->
-            <div class="stage-box stage-left">
+            <div class="projet-box projet-left">
                 <h2>Stage de 1ère année</h2>
                 <p>J'ai effectué un stage de 4 semaines chez <strong>Uniris</strong> où j'ai travaillé sur des serveurs Linux et la mise en place d’un serveur PXE.</p>
 
@@ -39,7 +39,7 @@
             </div>
 
             <!-- Stage 2ème année -->
-            <div class="stage-box stage-right">
+            <div class="projet-box projet-right">
                 <h2>Stage de 2ème année</h2>
                 <p>J'ai effectué un stage de 6 semaines au sein de l'entreprise <strong>Amsom-Habitat</strong> où j'ai pu travailler sur divers aspects de l'administration système et réseau.</p>
 
