--- a/projet.html
+++ b/projet.html
@@ -15,7 +15,7 @@
         <div class="projet-container">
             <!-- Projet 1: Gestion de Services IT -->
             <div class="projet-box projet-left">
-                <h2>Gestion de Services IT</h2>
+                <h2>Gestion de Services IT<br>Projet1</h2>
                 <p>Ce projet porte sur l’installation et la gestion de services informatiques pour une entreprise. Il est composé de 5 VM, une ipfire, une WinServ Active Directory, une Win10 utilisateur, un serveur xubuntu et un serveur debian. </p>
                 <h3>Services et technologies abordés :</h3>
                 <ul>
@@ -37,7 +37,7 @@
 
             <!-- Deuxième case avec les infos GPO -->
             <div class="projet-box projet-right">
-                <h2>Gestion des Stratégies de Groupe (GPO)</h2>
+                <h2>Gestion des Stratégies de Groupe (GPO)<br>Projet2</h2>
                 <p>Ce projet a été réalisé pour centraliser la gestion informatique d'une agence de voyage.</p>
                 <h3>Étapes du projet :</h3>
                 <ul>
