--- a/projet.html
+++ b/projet.html
@@ -37,7 +37,7 @@
 
             <!-- Deuxième case avec les infos GPO -->
             <div class="projet-box projet-right">
-                <h2>Gestion des Stratégies de Groupe (GPO)<br>Projet2</h2>
+                <h2>Gestion des Stratégies de Groupe<br>Projet2</h2>
                 <p>Ce projet a été réalisé pour centraliser la gestion informatique d'une agence de voyage.</p>
                 <h3>Étapes du projet :</h3>
                 <ul>
