--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
 
         <section id="a-propos">
             <h2>À propos de moi</h2>
-            <p>Je suis passionné par les systèmes et réseaux informatiques, ainsi que par le développement web. Mon parcours en BTS SIO SISR m'a permis de développer des compétences solides dans une multitude de domaine.</p>
+            <p>Je suis passionné par l’administration des systèmes et réseaux informatiques. Mon parcours en BTS SIO option SISR m’a permis de consolider mes compétences dans des domaines tels que la virtualisation, 
+                la sécurité réseau, l’administration de serveurs, et la gestion d’infrastructures informatiques.</p>
         </section>
 
 <section id="competences">
