--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <h2>Mes Compétences</h2>
     <div class="skills">
         <div class="skill">
-            <img src="imgcompétance/desckentral-1024x268.png" alt="Desktop Central" class="skill-icon" />
+            <alt="Desktop Central" class="skill-icon" />
             <h3>Desktop Central</h3>
             <div class="progress-bar">
                 <div class="progress" style="width: 90%;"></div>
