--- a/index.html
+++ b/index.html
@@ -192,8 +192,10 @@
 
         <section id="a-propos">
             <h2>À propos de moi</h2>
-            <p>Je suis passionné par l’administration des systèmes et réseaux informatiques. Mon parcours en BTS SIO option SISR m’a permis de consolider mes compétences dans des domaines tels que la virtualisation, 
-                la sécurité réseau, l’administration de serveurs, et la gestion d’infrastructures informatiques.</p>
+            <p>Actuellement étudiant en deuxième année de BTS SIO, spécialité SISR, je suis passionné par l’administration des systèmes et des réseaux informatiques. Mon parcours m’a permis de développer des compétences solides en matière de configuration, 
+                de sécurisation et de gestion des infrastructures IT. À travers mes stages et expériences professionnelles, j’ai eu l’occasion de travailler avec des outils comme GLPI, Cisco, Desktop Central ou encore FortiGate, 
+                ce qui m’a permis de mieux comprendre les enjeux de la cybersécurité, de la virtualisation et de l’administration de serveurs. Sérieux, curieux et motivé, 
+                je suis aujourd’hui à la recherche d’une alternance pour approfondir mes compétences sur le terrain et contribuer activement à des projets concrets en entreprise.</p>
         </section>
 
 <section id="competences">
