--- a/header.html
+++ b/header.html
@@ -14,7 +14,7 @@
                 </div>
             </li>
             <li><a href="Contact.html">Contact</a></li>
-            <li><a href="CV.pdf" target="_blank">CV</a></li>
+            <li><a href="CV-PRO.pdf" target="_blank">CV</a></li>
         </ul>
     </nav>
 </header>
