--- a/projet.html
+++ b/projet.html
@@ -59,11 +59,11 @@
             </div>
         </div>
         <section>
-            <h2>Documents supplémentaires</h2>
+            <!-- <h2>Documents supplémentaires</h2>
             <p><a href="Document/E6_Projet1_Caron_Adam.docx" target="_blank">📄 Télécharger le <strong>Projet1 E6</strong></a></p>
             <p><a href="Document/E6_Projet2_Caron_Adam.docx" target="_blank">📄 Télécharger le <strong>Projet2 E6</strong></a></p>
             <p><a href="Document/E6_Projet3_Caron_Adam.docx" target="_blank">📄 Télécharger le <strong>Projet3 E6</strong></a></p>
-        </section>
+        </section> -->
         <a href="index.html" class="back-link">Retour au portfolio</a>
     </main>
 
