--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <main class="container">
         <section id="accueil">
             <h1>Bienvenue sur le portfolio de Caron Adam</h1>
-            <p>Étudiant en 2ème année de BTS SIO, option SISR</p>
+            <p>Étudiant en 3ème année Bachelor cybersécurité en Alternance</p>
         </section>
 
         <section id="a-propos">
